# pmcontrols

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  agents.md  index.html  llms.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
agents/: index.html
assets/: example_automotive.py
docs/: agents.md  index.md  llms.txt
docs/assets/: framework.py
docs/guides/: crashing.md  critical-path.md  earned-value.md  evm-cron.md  gantt.md  pert-risk.md
docs/reference/: api.md  references.md  validation.md
examples/: automotive_program.py  coffee_shop.py  quickstart.py  visualization.py
guides/crashing/: index.html
guides/critical-path/: index.html
guides/earned-value/: index.html
guides/evm-cron/: index.html
guides/gantt/: index.html
guides/pert-risk/: index.html
pmcontrols/: __init__.py  _result.py  crash.py  evm.py  network.py  plot.py
reference/api/: index.html
reference/references/: index.html
reference/validation/: index.html
search/: search_index.json
tests/: test_cpm.py  test_crash.py  test_evm.py  test_gantt.py  test_pert.py  test_validation_suite.py  validation_cases.json
