[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcontrols"
version = "0.1.0"
description = "Project scheduling and earned value control for Python: CPM, PERT with Monte Carlo schedule risk, minimum-cost crashing, EVM and earned schedule, validated against published reference values."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10"]
keywords = [
    "project-management", "critical-path", "cpm", "pert",
    "earned-value", "evm", "earned-schedule", "schedule-risk",
    "crashing", "project-controls", "eia-748",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Scheduling",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff", "mypy", "build"]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://github.com/arikanatakan/pmcontrols"
Documentation = "https://arikanatakan.github.io/pmcontrols/"
Repository = "https://github.com/arikanatakan/pmcontrols"
Issues = "https://github.com/arikanatakan/pmcontrols/issues"

[tool.setuptools.packages.find]
include = ["pmcontrols*"]

[tool.setuptools.package-data]
pmcontrols = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
