[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pmcontrols"
version = "0.2.1"
description = "Project scheduling and earned value control for Python: CPM, PERT with Monte Carlo schedule risk, minimum-cost crashing, EVM and earned schedule, validated against published reference values."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Atakan Arikan" }]
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "scipy>=1.10"]
keywords = [
    "project-management", "critical-path", "cpm", "pert",
    "earned-value", "evm", "earned-schedule", "schedule-risk",
    "crashing", "project-controls", "eia-748",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Office/Business :: Scheduling",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest>=7", "ruff", "mypy", "build", "matplotlib>=3.5"]
docs = ["mkdocs-material"]

[project.urls]
Homepage = "https://github.com/arikanatakan/pmcontrols"
Documentation = "https://arikanatakan.github.io/pmcontrols/"
Repository = "https://github.com/arikanatakan/pmcontrols"
Issues = "https://github.com/arikanatakan/pmcontrols/issues"
"MCP server" = "https://github.com/arikanatakan/pmcontrols-mcp"

[tool.setuptools.packages.find]
include = ["pmcontrols*"]

[tool.setuptools.package-data]
pmcontrols = ["py.typed"]

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
